changed styling sheet href

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Site Bookmarker</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../JS Bookmarker app/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../JS Bookmarker app/css/style.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body onload="fetchBookmarks()">
