--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     src="https://code.jquery.com/jquery-3.1.1.js"
     integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
     crossorigin="anonymous"></script>
-    <script src="../JS Bookmarker app/js/bootstrap.min.js"></script>
-    <script src="../JS Bookmarker app/js/main.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
